--- a/upbeat/pom.xml
+++ b/upbeat/pom.xml
@@ -5,14 +5,14 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.2.4.RELEASE</version>
+		<version>2.2.5.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.proyecto</groupId>
 	<artifactId>upbeat</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>upbeat</name>
-	<description>Upbeat project for Spring Boot</description>
+	<description>Demo project for Spring Boot</description>
 
 	<properties>
 		<java.version>1.8</java.version>
@@ -40,10 +40,6 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-		<dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jpa</artifactId>
-        </dependency>
 	</dependencies>
 
 	<build>
