--- a/upbeat/src/main/resources/application.properties
+++ b/upbeat/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-server.port=8081
+server.port=8082
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/upbeat
+spring.datasource.username=postgres
+spring.datasource.password=root
