Properties para conectar con PostgreSQL
No se ha conseguido aún la conexión -> Ver qué falla

--- a/upbeat/src/main/resources/application.properties
+++ b/upbeat/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 server.port=8083
+
+# ===================================================
+# = DATA SOURCE
+# ===================================================
+# Configuración de las conexiones con la base de datos
+spring.datasource.url=jdbc:postgresql://localhost:5432/upbeat
+spring.datasource.platform=postgres
+spring.datasource.username=postgres
+spring.datasource.password=root
+spring.datasource.driver-class-name=.driver-class-name=org.postgresql.Driver
+spring.datasource.testWhileIdle=true
+spring.datasource.validationQuery=SELECT 1
