--- a/upbeat/src/main/resources/application.properties
+++ b/upbeat/src/main/resources/application.properties
@@ -1,13 +1,6 @@
-server.port=8083
+server.port=8080
 
 # ===================================================
 # = DATA SOURCE
 # ===================================================
-# Configuración de las conexiones con la base de datos
-spring.datasource.url=jdbc:postgresql://localhost:5432/upbeat
-spring.datasource.platform=postgres
-spring.datasource.username=postgres
-spring.datasource.password=root
-spring.datasource.driver-class-name=.driver-class-name=org.postgresql.Driver
-spring.datasource.testWhileIdle=true
-spring.datasource.validationQuery=SELECT 1
+spring.datasource.platform=h2
