--- a/upbeat/src/main/resources/application.properties
+++ b/upbeat/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-server.port=8080
+# POR SI HAY QUE CAMBIARLO, POR DEFECTO YA ES 8080
+# server.port=8080
 
 # ===================================================
 # = DATA SOURCE
