--- a/upbeat/pom.xml
+++ b/upbeat/pom.xml
@@ -5,14 +5,14 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.2.5.RELEASE</version>
+		<version>2.2.6.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.proyecto</groupId>
+	<groupId>com.software</groupId>
 	<artifactId>upbeat</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>upbeat</name>
-	<description>Demo project for Spring Boot</description>
+	<description>Project for Spring Boot</description>
 
 	<properties>
 		<java.version>1.8</java.version>
@@ -20,19 +20,18 @@
 
 	<dependencies>
 		<dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jpa</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
-            <scope>runtime</scope>
-        </dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-
+		<dependency>
+  			<groupId>net.sf.dozer</groupId>
+  			<artifactId>dozer</artifactId>
+  			<version>5.5.1</version>
+		</dependency>
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
@@ -48,11 +47,6 @@
 					<artifactId>junit-vintage-engine</artifactId>
 				</exclusion>
 			</exclusions>
-		</dependency>
-		<dependency>
-  			<groupId>net.sf.dozer</groupId>
-  			<artifactId>dozer</artifactId>
-  			<version>5.5.1</version>
 		</dependency>
 	</dependencies>
 
