--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,12 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<dependency>
+		    <groupId>org.glassfish.jersey.media</groupId>
+		    <artifactId>jersey-media-json-jackson</artifactId>
+		</dependency>
 	</dependencies>
+	
 
 	<build>
 		<plugins>
