--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,11 @@
 		    <groupId>org.glassfish.jersey.media</groupId>
 		    <artifactId>jersey-media-json-jackson</artifactId>
 		</dependency>
+		<dependency>
+		    <groupId>org.hibernate</groupId>
+		    <artifactId>hibernate-core</artifactId>
+		    <version>5.4.12.Final</version><!--$NO-MVN-MAN-VER$-->
+		</dependency>
 	</dependencies>
 	
 
